--- a/professores/templates/professores/avaliar_entregas.html
+++ b/professores/templates/professores/avaliar_entregas.html
@@ -261,5 +261,6 @@
   </script>
 
   {% include "edicoes_ajax.html" %}
+  {% include "mostra_api.html" with endpoints=endpoints %}
 
 {% endblock %}
