--- a/templates/base.html
+++ b/templates/base.html
@@ -81,9 +81,18 @@
         {% endif %}
 
         <a href="{% url 'info'%}">{% lng "Informações" "Information" %}</a>
+
         {% if user.is_authenticated %}
           <a href="{% url 'perfil' %}">{% lng "Perfil" "Profile" %}</a>
           <a href="{% url 'index' %}">{% lng "Página Geral" "General Page" %}</a>
+
+          {% for item in nav_menu_items %}
+            <a href="{% url item.url %}">{% lng item.title.pt item.title.en %}</a>
+          {% endfor %}
+        {% endif %}
+
+
+{% comment %} 
           <a href="{% url 'calendario' %}">{% lng "Calendário" "Calendar" %}</a>
           {% if user.eh_admin or user.eh_estud %}
             <a href="{% url 'index_estudantes' %}">{% lng "Área dos Estudantes" "Students' Area" %}</a>
@@ -109,13 +118,18 @@
             <a href="{% url 'index_administracao'%}">{% lng "Área Administrativa" "Administrative Area" %}</a>
           {% endif %}
           {% if perms.projetos.view_proposta or perms.projetos.view_projeto %}
-            {% if request.user.membro_comite %}
+            {% if request.user.membro_comite or request.user.membro_operacional or request.user.eh_admin %}
               <a href="{% url 'index_propostas'%}">{% lng "Propostas" "Proposals" %}</a>
             {% endif %}
             <a href="{% url 'index_projetos'%}">{% lng "Projetos" "Projects" %}</a>
           {% endif %}
         {% endif %}
         <a href="{% url 'index_documentos'%}">{% lng "Documentos" "Documents" %}</a>
+ {% endcomment %}
+
+
+
+
         {% if user.is_authenticated %}
           <a href="{% url 'logout'%}">Logout</a>
         {% else %}
