--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,50 @@
 {% block head %}
   {% load static %}
   {% load linguas %}
+  {% load get_field %}
   <link rel="stylesheet" href="{% static 'css/indexes.css' %}">
 {% endblock %}
 
 {% block content %}
   <div class="container mt-4">
     <div class="card-container">
+
+      {% for group_name, cards in card_groups.items %}
+        {% if cards %}
+          {% if not forloop.first %}
+            <div class="extra-space"></div>
+          {% endif %}
+          
+          {% for card in cards %}
+            <div class="card">
+              {% if card.direct_link %}
+                <a class="link_direto" href="{% url card.url %}">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      <i class="{{ card.icon }}"></i> {% lng card.title.pt card.title.en %}
+                    </h5>
+                  </div>
+                </a>
+              {% else %}
+                <div class="card-body {% if card.highlight_for and user|get_attr:card.highlight_for %}c_destaque{% endif %}" 
+                     onclick="loadContent(this, '{% url card.url %}')">
+                  <h5 class="card-title">
+                    <i class="{{ card.icon }}"></i> {% lng card.title.pt card.title.en %}
+                  </h5>
+                </div>
+                <div class="card-content"></div>
+              {% endif %}
+            </div>
+          {% endfor %}
+        {% endif %}
+      {% endfor %}
+
+
+
+
+
+{% comment %} 
+
       <div class="card">
         <a  class="link_direto" href="{% url 'calendario' %}">
           <div class="card-body">
@@ -25,8 +63,6 @@
       </div>
       
       <div class="extra-space"></div>
-
-      {% comment %} {% if perms.estudantes %} {% endcomment %}
       {% if user.eh_admin or user.eh_estud %}
         <div class="card">
           <div class="card-body {% if user.eh_estud %}c_destaque{% endif %}" 
@@ -39,7 +75,6 @@
         </div>
       {% endif %}
       {% if user.eh_admin or user.eh_parc or request.user.membro_comite %}
-      {% comment %} {% if perms.projetos.add_proposta %} {% endcomment %}
         <div class="card ">
           <div class="card-body {% if user.eh_parc %}c_destaque{% endif %}"
            onclick="loadContent(this, '{% url 'organizacoes' %}')">
@@ -75,7 +110,6 @@
       {% if perms.projetos.view_avaliacao2 or perms.users.change_professor %}
         <div class="extra-space"></div>
         
-        {% comment %} {% if perms.projetos.view_avaliacao2 %} {% endcomment %}
         {% if user.eh_admin or request.user.membro_comite %}
           <div class="card">
             <div class="card-body" onclick="loadContent(this, '{% url 'academica' %}')">
@@ -86,7 +120,6 @@
             <div class="card-content"></div>
           </div>
         {% endif %}
-        {% comment %} {% if perms.users.change_professor %} {% endcomment %}
         {% if user.eh_admin or user.membro_operacional or user.membro_tecnico %}
           <div class="card">
             <div class="card-body" onclick="loadContent(this, '{% url 'operacional' %}')">
@@ -111,7 +144,7 @@
       
       {% if perms.projetos.view_proposta or perms.projetos.view_projeto %}
         <div class="extra-space"></div>
-        {% if perms.projetos.view_proposta and request.user.membro_comite %}
+        {% if request.user.membro_comite or request.user.membro_operacional or request.user.eh_admin %}
           <div class="card">
             <div class="card-body" onclick="loadContent(this, '{% url 'propostas' %}')">
               <h5 class="card-title">
@@ -142,6 +175,13 @@
         </div>
         <div class="card-content"></div>
       </div>
+
+
+ {% endcomment %}
+
+
+
+
 
     </div>
   </div>
