--- a/professores/templates/professores/bancas_alocadas.html
+++ b/professores/templates/professores/bancas_alocadas.html
@@ -114,6 +114,6 @@
   {% include "toggle_anteriores.html" %}
 
   {% lng 'Obs: Professor, para cadastrar/atualizar uma banca, acesse "Agendar Bancas" na sua' 'Note: Professor, to schedule/update an examination board, access "Agendar Bancas" in your' %}
-  <a href="{% url 'index_professor' %}">{% lng "página do Professor" "Professor's page" %}</a>.
+  <a href="{% url 'index_professores' %}">{% lng "página do Professor" "Professor's page" %}</a>.
 
 {% endblock %}
