--- a/estudantes/templates/estudantes/includes/perguntas_funcionalidade.html
+++ b/estudantes/templates/estudantes/includes/perguntas_funcionalidade.html
@@ -12,9 +12,10 @@
 
   <style>
     table#disfuncoes td {padding: 2px 5px;}
+    table#questoes th {padding: 1px 6px;}
   </style>
 
-  <table class="tabela-padrao table-striped table-hover table-responsive mb-4">
+  <table id="questoes" class="tabela-padrao table-striped table-hover table-responsive mb-4">
     <thead>
       <tr>
         <th class="hide-on-narrow" {% if mostra_estudante %}rowspan="2"{% endif %}>#</th>
@@ -23,37 +24,42 @@
       </tr>
       {% if mostra_estudante %}
         <tr>
-          {% for estudante, funcionalidade in funcionalidade_grupo.items %}
-            <th><small>{{ estudante.first_name }}</small></th>
+          {% for usuario, funcionalidade in funcionalidade_grupo.items %}
+            <th class="{% if usuario.eh_prof_a %}text-info{% else %}text-primary{% endif %}" style="text-align:center">
+              {% if usuario.eh_prof_a %}<i class="fa fa-chalkboard-teacher"></i>{% else %}<i class="fa fa-user-graduate"></i>{% endif %}
+              <small>{{ usuario.first_name }}</small>
+            </th>
           {% endfor %}
         </tr>
       {% endif %}
     </thead>
     <tbody>
-      {% for questao in questoes_funcionalidade.questoes %}
-        <tr>
-          {% with q=forloop.counter %}
-            <td class="hide-on-narrow" style="text-align:center">{{ q }}</td>
-            <td>{{ questao }}</td>
-            {% with question_key="question_"|concat:q|stringformat:"s" %}
-              {% for estudante, funcionalidade in funcionalidade_grupo.items %}
-                <td>
-                  {% with f=funcionalidade|get_attr:question_key %}
-                    {% if ver %}
-                      {% if f == 1 %}<input type="radio" name="{{ forloop.counter0 }}question_{{ q }}" value="1" checked style="display:none;">{% lng "Baixa" "Low" %}{% endif %}
-                      {% if f == 2 %}<input type="radio" name="{{ forloop.counter0 }}question_{{ q }}" value="2" checked style="display:none;">{% lng "Média" "Medium" %}{% endif %}
-                      {% if f == 3 %}<input type="radio" name="{{ forloop.counter0 }}question_{{ q }}" value="3" checked style="display:none;">{% lng "Alta" "High" %}{% endif %}
-                    {% else %}
-                      <label><input type="radio" name="question_{{ q }}" value="1" {% if f == 1 %}checked{% endif %}> {% lng "Baixa" "Low" %}</label><br>
-                      <label><input type="radio" name="question_{{ q }}" value="2" {% if f == 2 %}checked{% endif %}> {% lng "Média" "Medium" %}</label><br>
-                      <label><input type="radio" name="question_{{ q }}" value="3" {% if f == 3 %}checked{% endif %}> {% lng "Alta" "High" %}</label>
-                    {% endif %}
-                  {% endwith %}
-                </td>
-              {% endfor %}
+      {% for linha in questoes_funcionalidade.questoes %}
+        {% if ver or user.tipo_de_usuario in linha.usuarios %}
+          <tr>
+            {% with q=linha.numero %}
+              <td class="hide-on-narrow" style="text-align:center">{{ q }}</td>
+              <td>{{ linha.questao }}</td>
+              {% with question_key="question_"|concat:q|stringformat:"s" %}
+                {% for usuario, funcionalidade in funcionalidade_grupo.items %}
+                  <td class="{% if usuario.eh_prof_a %}text-info{% else %}text-primary{% endif %}" style="text-align:center">
+                    {% with f=funcionalidade|get_attr:question_key %}
+                      {% if ver %}
+                        {% if f == 1 %}<input type="radio" name="{{ forloop.counter0 }}question_{{ q }}" value="1" checked style="display:none;">{% lng "Baixa" "Low" %}{% endif %}
+                        {% if f == 2 %}<input type="radio" name="{{ forloop.counter0 }}question_{{ q }}" value="2" checked style="display:none;">{% lng "Média" "Medium" %}{% endif %}
+                        {% if f == 3 %}<input type="radio" name="{{ forloop.counter0 }}question_{{ q }}" value="3" checked style="display:none;">{% lng "Alta" "High" %}{% endif %}
+                      {% else %}
+                        <label><input type="radio" name="question_{{ q }}" value="1" {% if f == 1 %}checked{% endif %}> {% lng "Baixa" "Low" %}</label><br>
+                        <label><input type="radio" name="question_{{ q }}" value="2" {% if f == 2 %}checked{% endif %}> {% lng "Média" "Medium" %}</label><br>
+                        <label><input type="radio" name="question_{{ q }}" value="3" {% if f == 3 %}checked{% endif %}> {% lng "Alta" "High" %}</label>
+                      {% endif %}
+                    {% endwith %}
+                  </td>
+                {% endfor %}
+              {% endwith %}
             {% endwith %}
-          {% endwith %}
-        </tr>
+          </tr>
+        {% endif %}
       {% endfor %}
     </tbody>
   </table>
