--- a/projetos/templates/projetos/projeto_infos.html
+++ b/projetos/templates/projetos/projeto_infos.html
@@ -638,7 +638,7 @@
 
     {% if user.eh_prof_a %}
       {% include "estudantes/includes/conduta_respostas.html" with grupo=True %}
-      {% include "estudantes/includes/funcionalidade_respostas.html" with mostra_estudante=True %}
+      {% include "estudantes/includes/funcionalidade_respostas.html" with mostra_resultados=True %}
       {% include "estudantes/includes/pares_respostas.html" %}
     {% endif %}
 
